# cadiionogram-rs

./: .gitignore  Cargo.toml  build_whl.py  setup.py
src/: lib.rs  main.rs  pytzdatetime.rs  read_cadi.rs  siteinfo.rs
src/read_cadi/: cadi_dataclass.rs  mod.rs
tests/: read_cadi_tests.rs  siteinfo_tests.rs
